# ai4edu

./: .gitignore  README.md  overview.md  start-tunnel.bat
backend/: .dockerignore  .env.example  Dockerfile  alembic.ini  pyproject.toml  requirements.txt
backend/app/: config.py  database.py  dependencies.py  main.py
backend/app/agents/: __init__.py  anti_misconception_agent.py  base.py  buddy_agent.py  classroom_agent.py  diagnosis_agent.py  file_rag_agent.py  general_agent.py  intent_router.py  lesson_plan_agent.py  psychology_agent.py  quiz_agent.py  rag_agent.py  subject_agent.py
backend/app/core/: data_classification.py  encryption.py  exceptions.py  redis.py  security.py  telemetry.py
backend/app/middleware/: auth.py  logging.py  rate_limit.py  rbac.py  security.py  tenant.py
backend/app/models/: __init__.py  agent.py  analytics.py  audit.py  buddy.py  classroom.py  course.py  diagnosis.py  flash_card.py  help.py  lesson_plan.py  note.py  notification.py  permission.py  resource.py  scene.py  tenant.py  user.py
backend/app/repositories/: base.py  resource_repo.py  user_repo.py
backend/app/schemas/: agent.py  auth.py  classroom.py  common.py  diagnosis.py  note.py  scene.py  user.py
backend/app/services/: analytics_service.py  auth_service.py  (+14 more)
backend/migrations/: env.py
backend/scripts/: check_columns.py  create_tenant.py  e2e_verify.py  init_infra.py  seed_data.py  seed_knowledge_graph.py  seed_knowledge_graph_standalone.py  seed_notes_resources.py  test_apis.py  test_apis_full.py  test_buddy_chat.py
backend/tests/: __init__.py  conftest.py
(+165 files in other folders)
